トップへの遷移追加

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>{{title}}</h1>
-    <a href="{% url 'emojiTransApp:top' %}">翻訳ページへ</a><br>
+    <a href="{% url 'emojiTransApp:form' %}">翻訳ページへ</a><br>
   </body>
 </html>
