--- a/templates/result.html
+++ b/templates/result.html
@@ -8,5 +8,6 @@
         <p>{{sentence}}</p>
         <h1>翻訳絵文字列</h1>
         <p>&#x1F600;</p>
+        <a href="{% url 'top' %}">トップページへ戻る</a><br>
     </body>
 </html>
