ボタン変更

--- a/templates/sentence_form.html
+++ b/templates/sentence_form.html
@@ -8,7 +8,7 @@
         <form method="POST" action="result">
             {%csrf_token%}
             <input placeholder="自然言語文" name="sentence" type="text"/>
-            <input value="送信" type="submit"/>
+            <input value="翻訳" type="submit"/>
         </form>
     </body>
 </html>
