--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>{{title}}</h1>
-    <a href="{% url 'emojiTransApp:form' %}">翻訳ページへ</a><br>
+    <a href="{% url 'emojiTransApp:form' %}">翻訳ページ</a><br>
+    <a href="{% url 'visual' %}">絵文字マップ</a><br>
   </body>
 </html>
