外部サイトリンクの追加

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,5 +8,7 @@
     <h1>{{title}}</h1>
     <a href="{% url 'emojiTransApp:form' %}">翻訳ページ</a><br>
     <a href="{% url 'visual' %}">絵文字マップ</a><br>
+    <a href="https://unicode.org/emoji/charts/full-emoji-list.html">絵文字リスト（外部サイト）</a><br>
+    <a href="https://emojipedia.org/">絵文字ペディア（外部サイト）</a><br>
   </body>
 </html>
