--- a/templates/sentence_form.html
+++ b/templates/sentence_form.html
@@ -1,14 +1,10 @@
-<!doctype html>
-<html>
-    <head>
-        <metacharset="utf8"/>
-    </head>
-    <body>
-        <h1>自然言語文を入力してください。絵文字列に翻訳します。</h1>
-        <form method="POST" action="result">
-            {%csrf_token%}
-            <input placeholder="自然言語文" name="sentence" type="text"/>
-            <input value="翻訳" type="submit"/>
-        </form>
-    </body>
-</html>
+{% extends "base.html" %}
+{% block title %}絵文字フォーム{% endblock %}
+{% block active2 %}active{% endblock %}
+{% block content %}
+    <form method="POST" action="result">
+        {% csrf_token %}
+        <input placeholder="English Sentence" name="sentence" type="text"/>
+        <button type="submit">翻訳</button>
+    </form>
+{% endblock %}
