--- a/templates/emoji/result.html
+++ b/templates/emoji/result.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base/base.html" %}
 {% block title %}絵文字翻訳結果ページ{% endblock %}
 {% block content %}
   <h1>入力された自然言語文</h1>
