--- a/templates/emoji/sentence_form.html
+++ b/templates/emoji/sentence_form.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base/base.html" %}
 {% block title %}絵文字フォーム{% endblock %}
 {% block active2 %}active{% endblock %}
 {% block content %}
