--- a/templates/emoji/visualize.html
+++ b/templates/emoji/visualize.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base/base.html" %}
 {% block title %}絵文字空間可視化ページ{% endblock %}
 {% block content %}
     <h1>emoji2vecによる絵文字埋め込み空間の可視化</h1>
