--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -10,11 +10,8 @@
           crossorigin="anonymous"/>
   </head>
   <body>
-    <!-- <nav class="navbar navbar-dark bg-dark mt-3 mb-3">
-      <a class="navbar-brand" href="/">タスク管理アプリ</a>
-    </nav> -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mt-3 mb-3">
-        <a class="navbar-brand" href="/">cross-lingual単語埋め込み</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="/">研究</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarText" aria-controls="navbarText"
                 aria-expanded="false" aria-label="Toggle navigation">
@@ -27,6 +24,9 @@
                 </li>
                 <li class="nav-item {% block active2 %}{% endblock %}">
                     <a class="nav-link" href="{% url 'emojiTransApp:top' %}">絵文字</a>
+                </li>
+                <li class="nav-item {% block active3 %}{% endblock %}">
+                    <a class="nav-link" href="{% url 'paper:index' %}">論文</a>
                 </li>
             </ul>
         </div>
