--- a/templates/emoji/emoji_top.html
+++ b/templates/emoji/emoji_top.html
@@ -1,9 +1,9 @@
-{% extends "base.html" %}
+{% extends "base/base.html" %}
 {% block title %}絵文字トップ{% endblock %}
 {% block active2 %}active{% endblock %}
 {% block content %}
 <a href="{% url 'emojiTransApp:form' %}">翻訳ページ</a><br>
-<a href="{% url 'visual' %}">絵文字マップ</a><br>
+<a href="{% url 'emojiTransApp:visual' %}">絵文字マップ</a><br>
 <a href="https://unicode.org/emoji/charts/full-emoji-list.html">絵文字リスト（外部サイト）</a><br>
 <a href="https://emojipedia.org/">絵文字ペディア（外部サイト）</a><br>
 {% endblock %}
