--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %}
+{% extends "base/base.html" %}
 {% block title %}トップページ{% endblock %}
 {% block content %}
-    <h1>cross-lingualな世界へようこそ</h1>
+    <h1>研究状況</h1>
 {% endblock %}
