--- a/templates/crosslingual/translate_list.html
+++ b/templates/crosslingual/translate_list.html
@@ -1,5 +1,5 @@
 {% extends "base/base.html" %}
-{% block title %}絵文字翻訳結果ページ{% endblock %}
+{% block title %}単語翻訳結果ページ{% endblock %}
 {% block content %}
   {% for tran in trans %}
     <div class='container mb-5'>
