--- a/templates/paper/paper_detail.html
+++ b/templates/paper/paper_detail.html
@@ -1,5 +1,6 @@
 {% extends 'base/base.html' %}
 {% block title %}{{ paper.title }}{% endblock %}
+{% block active3 %}active{% endblock %}
 {% block content %}{% endblock %}
 {% block content2 %}
   <div class="container">
@@ -12,10 +13,10 @@
           </div>
           {% endfor %}
           <div class="card-footer">
-            <a class="btn btn-success btn-block my-2" href="{% url 'paper:index' %}">論文一覧へ</a>
-            <a class="btn btn-primary btn-block my-2" href="{% url 'paper:update' paper.id %}?next={{ request.get_full_path }}">修正</a>
             <form method="post" action="{% url 'paper:delete' paper.id %}">{% csrf_token %}
-              <button class="btn btn-danger btn-block" type="submit" onclick='return confirm("本当に削除しますか？");'>削除</button>
+              <a class="btn btn-success" href="{% url 'paper:index' %}">論文一覧へ</a>
+              <a class="btn btn-primary" href="{% url 'paper:update' paper.id %}?next={{ request.get_full_path }}">修正</a>
+              <button class="btn btn-danger" type="submit" onclick='return confirm("本当に削除しますか？");'>削除</button>
             </form>
           </div>
         </div>
