--- a/templates/paper/paper_detail.html
+++ b/templates/paper/paper_detail.html
@@ -3,24 +3,21 @@
 {% block active3 %}active{% endblock %}
 {% block content %}{% endblock %}
 {% block content2 %}
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <div class="card card-default">
-          {% for key,value in info.items %}
-          <div class="card-body">
-            ○{{key}} : <br>{% if value is not None %}{{ value|linebreaksbr }}{% endif %}
-          </div>
-          {% endfor %}
-          <div class="card-footer">
-            <form method="post" action="{% url 'paper:delete' paper.id %}">{% csrf_token %}
-              <a class="btn btn-success" href="{% url 'paper:index' %}">論文一覧へ</a>
-              <a class="btn btn-primary" href="{% url 'paper:update' paper.id %}?next={{ request.get_full_path }}">修正</a>
-              <button class="btn btn-danger" type="submit" onclick='return confirm("本当に削除しますか？");'>削除</button>
-            </form>
-          </div>
-        </div>
-      </div>
+  <div class="card card-default">
+    <div class="card-body">
+        ○タイトル : {% if paper.title is not None %}{{ paper.title }}{% endif %}<br><br>
+        ○分野　 　: {% if paper.field is not None %}{{ paper.field }}{% endif %}<br>
+        ○著者　 　: {% if paper.author is not None %}{{ paper.author }}{% endif %}<br>
+        ○会議名 　: {% if paper.conference is not None %}{{ paper.conference }}{% endif %}<br>
+        ○年　　 　: {% if paper.year is not None %}{{ paper.year }}{% endif %}<br><br>
+        ○感想 : {% if paper.memo is not None %}{{ paper.memo|linebreaksbr }}{% endif %}<br><br>
+    </div>
+    <div class="card-footer">
+       <form method="post" action="{% url 'paper:delete' paper.id %}">{% csrf_token %}
+          <a class="btn btn-sm btn-success" href="{% url 'paper:index' %}">論文一覧へ</a>
+          <a class="btn btn-sm btn-primary" href="{% url 'paper:update' paper.id %}?next={{ request.get_full_path }}">修正</a>
+          <button class="btn btn-sm btn-danger" type="submit" onclick='return confirm("本当に削除しますか？");'>削除</button>
+        </form>
     </div>
   </div>
 {% endblock %}
