--- a/templates/paper/paper_list.html
+++ b/templates/paper/paper_list.html
@@ -23,9 +23,9 @@
         {% endif %}
         <div class="card-footer">
           <form method="post" action="{% url 'paper:delete' paper.id %}">{% csrf_token %}
-            <a class="btn btn-success" href="{% url 'paper:detail' paper.id %}">詳細</a>
-            <a class="btn btn-primary" href="{% url 'paper:update' paper.id %}?next={{ request.get_full_path }}">修正</a>
-            <button class="btn btn-danger" type="submit" onclick='return confirm("本当に削除しますか？");'>削除</button>
+            <a class="btn btn-sm btn-success" href="{% url 'paper:detail' paper.id %}">詳細</a>
+            <a class="btn btn-sm btn-primary" href="{% url 'paper:update' paper.id %}?next={{ request.get_full_path }}">修正</a>
+            <button class="btn btn-sm btn-danger" type="submit" onclick='return confirm("本当に削除しますか？");'>削除</button>
           </form>
         </div>
       </div>
