--- a/templates/paper/paper_list.html
+++ b/templates/paper/paper_list.html
@@ -31,11 +31,11 @@
       </div>
     </div>
   {% endfor %}
-  {% for papers in paper2 %}
-    <div class="row">
-      {% for paper in papers %}
-        <div class="col-6 my-2 d-none d-md-block">
-          <div class="card card-default">
+  <div class="row">
+    {% for papers in paper2 %}
+      <div class="col-6 my-2 d-none d-md-block">
+        {% for paper in papers %}
+          <div class="card card-default my-2">
             <div class="card-body">
               <h5 class='card-title'>○タイトル</h5>
               <p class='card-text'>{{ paper.title|linebreaksbr }}</p>
@@ -52,9 +52,9 @@
               </div>
             </div>
           </div>
-        </div>
-      {% endfor %} 
-    </div>
-  {% endfor %}
+        {% endfor %} 
+      </div>
+    {% endfor %}
+  </div>
 {% endblock %}
 
