--- a/templates/paper/paper_detail.html
+++ b/templates/paper/paper_detail.html
@@ -5,7 +5,12 @@
 {% block content2 %}
   <div class="card card-default">
     <div class="card-body">
-      {% if paper.title is not None %}<p class='card-text'>○タイトル :　{{ paper.title }}</p>{% endif %}
+      {% if paper.url is not None %}
+        <p class='card-text'>○タイトル :　<a href={{paper.url}}>{% if paper.title is not None %}{{ paper.title }}{% endif %}</a></p>
+      {% else %}
+        {% if paper.title is not None %}<p class='card-text'>○タイトル :　{{ paper.title }}</p>{% endif %}
+      {% endif %}
+      
       {% if paper.field is not None %}<p class='card-text'>○分野　 　:　{{ paper.field }}</p>{% endif %}
       {% if paper.author is not None %}<p class='card-text'>○著者　 　:　{{ paper.author }}</p>{% endif %}
       {% if paper.conference is not None %}<p class='card-text'>○会議名 　:　{{ paper.conference }}</p>{% endif %}
