--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -35,11 +35,11 @@
         </div>
     </nav>
     <!-- <div class="jumbotron"> -->
-      <div class="container my-4">
+      <div class="container my-4 col-12">
         {% block content %}
         {% endblock %}
       </div>
-      <div class="container my-4">
+      <div class="container my-4 col-12">
         {% block content2 %}
         {% endblock %}
       </div>
