--- a/templates/crosslingual/translate_list.html
+++ b/templates/crosslingual/translate_list.html
@@ -1,5 +1,6 @@
 {% extends "base/base.html" %}
 {% block title %}単語翻訳結果ページ{% endblock %}
+{% block active1 %}active{% endblock %}
 {% block content %}
   {% for tran in trans %}
     <div class='container mb-5'>
