--- a/templates/crosslingual/cross_result.html
+++ b/templates/crosslingual/cross_result.html
@@ -1,5 +1,5 @@
 {% extends "base/base.html" %}
-{% block title %}絵文字翻訳結果ページ{% endblock %}
+{% block title %}単語翻訳結果ページ{% endblock %}
 {% block active1 %}active{% endblock %}
 {% block content %}
   <h3>{{source}}</h3>
@@ -11,6 +11,8 @@
       {{ result }}<br>
     {% endfor %}
   </div>
+  <br>
+  <h5>*公開環境では上位5000単語に限定した結果が表示されます</h5>
 {% endblock %}
 {% block content3 %}
   <a href="{% url 'crosslingual:form' %}">もう一度翻訳する</a><br>
