--- a/templates/crosslingual/frequent_table.html
+++ b/templates/crosslingual/frequent_table.html
@@ -16,7 +16,7 @@
   <h4>入力 : {{src}}　出力 : {{tgt}}</h4>
   <table class='table-sm table-striped text-center' style="table-layout:fixed;width:100%;">
     <colgroup>
-      <col>
+      <col style="width:3%;">
       <col style="width:10%;">
       <col style="width:10%;">
       <col style="width:10%;">
@@ -32,7 +32,7 @@
     <thead>
       <tr class='table-primary'>
         <th></th>
-        <th>入力単語</th>
+        <th>入力</th>
         <th>出力1</th>
         <th>出力2</th>
         <th>出力3</th>
