--- a/templates/paper/paper_list.html
+++ b/templates/paper/paper_list.html
@@ -21,6 +21,10 @@
         {% else %}
           <p class='card-text'>{{ paper.title|linebreaksbr }}</p>
         {% endif %}
+        {% if paper.year is not None %}
+          <h5 class='card-title'>○年・感想</h5>
+          <p class='card-text'>{{ paper.year }} {{ paper.conference|linebreaksbr }}</p>
+        {% endif %}
         {% if paper.memo is not None %}
           <h5 class='card-title'>○感想</h5>
           <p class='card-text'>{{ paper.memo|linebreaksbr }}</p>
@@ -46,6 +50,10 @@
                 <p class='card-text'><a href={{paper.url}}>{{ paper.title|linebreaksbr }}</a></p>
               {% else %}
                 <p class='card-text'>{{ paper.title|linebreaksbr }}</p>
+              {% endif %}
+              {% if paper.year is not None %}
+                <h5 class='card-title'>○年・感想</h5>
+                <p class='card-text'>{{ paper.year }} {{ paper.conference|linebreaksbr }}</p>
               {% endif %}
               {% if paper.memo is not None %}
                 <h5 class='card-title'>○感想</h5>
